[tool.poetry]
name = "hamming-sim-pytorch"
version = "0.1.2"
description = "This package contains code for hamming similarity optimized for cpu."
authors = [
    "Yashasvi Ranawat <yashasvi.ranawat@iprally.com>",
]
maintainers = [
    "Berker Peksag <berker.peksag@iprally.com>",
]
license = "MIT"
packages = [
    { include = "hamming_sim" },
]
include = [
    { path = "hamming_sim/**/*.so", format = "wheel" },
    { path = "hamming_sim/**/*.cpp", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.13.1"
numpy = "~1.22"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
ruff = "^0.8"
build = "^1.2"
twine = "^6.1"

[tool.poetry.build]
script = "scripts/build_extension.py"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "torch==1.13.1"]
build-backend = "poetry.core.masonry.api"
